--- a/alembic.ini
+++ b/alembic.ini
@@ -50,7 +50,7 @@ version_path_separator = os  # default: use os.pathsep
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql+pymysql://root:Ira.ko03@127.0.0.1:3306/article_service
+sqlalchemy.url = mysql+pymysql://root:1234432aat@localhost/article_service
 
 
 [post_write_hooks]
